--- a/index.html
+++ b/index.html
@@ -3,35 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Age calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title> Age calculator app</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  Day
-  DD
-
-  Month
-  MM
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+      <form action="" method="get">
+        <div id="container-day">
+          <label for="day">Day</label>
+          <input type="number" name="day" id="day">
+        </div>
+        <div id="container-month">
+          <label for="month">Month</label>
+          <input type="number" name="month" id="month">
+        </div>
+        <div id="container-year">
+          <label for="year">Year</label>
+          <input type="number" name="year" id="year">
+        </div>
+        <div  id="button">
+          <img onclick="send()" src="assets/images/icon-arrow.svg" alt="button">
+        </div>
+      </form>
+    <hr>
+    <section id="res">
+      <div id="res-year">-- Years</div>
+      <div id="res-month">-- Months</div>
+      <div id="res-day">-- Days</div>
+    </section>
+  </main>
 </body>
+<script src="script.js"></script>
 </html>
